--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+      <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Camp in Cox" />
+  <meta property="og:description" content="CAMP In COX." />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.jpeg" />
+  <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
