--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Camp In Cox"
     />
       <!-- Open Graph Metadata -->
   <meta property="og:title" content="Camp in Cox" />
