--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Camp In Cox"
     />
       <!-- Open Graph Metadata -->
-  <meta property="og:title" content="Camp in Cox" />
-  <meta property="og:description" content="CAMP In COX." />
-  <meta property="og:image" content="%PUBLIC_URL%/logo.jpeg" />
-  <meta property="og:type" content="website" />
-
+      <meta property="og:title" content="Camp In Cox - Your Dream Camping Destination">
+      <meta property="og:description" content="Experience the best camping adventure at Camp In Cox!">
+      <meta property="og:image" content="logo.jpeg">
+      <meta property="og:url" content="https://camp-in-cox.netlify.app/">
+      <meta property="og:type" content="website">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
